# soft-serve

./: Cargo.toml  README.md
src/: handler.rs  main.rs  router.rs  server.rs
static/: index.html
