[package]
name = "soft-serve"
version = "0.1.0"
authors = ["dth88 <gdath100500@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-staticfile = { version = "0.6.0" }